# web-vector-tile-maker

./: .gitignore  LICENSE  README.md  SETUP.md  vite-usage-guide.md
.github/workflows/: deploy.yml
core/: Cargo.toml  build.rs
core/proto/: vector_tile.proto
core/src/: geojson_parser.rs  lib.rs  mvt_encoder.rs  projection.rs  tiler.rs  wasm_api.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  MapPreview.tsx  index.css  main.tsx  tileStore.ts  worker.ts
test_data/: points.geojson
