[package]
name = "vector-tile-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geo-types = "0.7"
geojson = "0.24"
prost = "0.12"
prost-types = "0.12"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6"

# For web target
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[build-dependencies]
prost-build = "0.12"

[profile.release]
opt-level = 3
lto = true
